# samp-streamer-plugin

./: .gitignore  CMakeLists.txt  pawn.json
.github/workflows/: build.yml
docker/: build.sh  docker-entrypoint.sh
src/: CMakeLists.txt  sampgdk.c  sampgdk.h
src/utility/: amx.cpp
